Added github soc link

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manna</title>
     <link rel="stylesheet" href="/style/shared.css">
 </head>
 <body>
@@ -31,6 +31,9 @@
         <div class="container--general">
             <footer class="footer">
                 <div class="social-links">
+                    <a href="https://github.com/lkito/web_final/tree/master/WebFinalApp/WebFinalApp/wwwroot" target="_blank">
+                        <img class="social-button" src="/images/SocIcons/icon_github.png" alt="">
+                    </a>
                     <a href="https://twitter.com/realDonaldTrump" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_pinterest.png" alt="">
                     </a>
