Makes social media icons responsive

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -31,22 +31,22 @@
         <div class="container--general">
             <footer class="footer">
                 <div class="social-links">
-                    <a href="https://github.com/lkito/web_final/tree/master/WebFinalApp/WebFinalApp/wwwroot" target="_blank">
+                    <a class="soc_link" href="https://github.com/lkito/web_final/tree/master/WebFinalApp/WebFinalApp/wwwroot" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_github.png" alt="">
                     </a>
-                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                    <a class="soc_link" href="https://twitter.com/realDonaldTrump" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_pinterest.png" alt="">
                     </a>
-                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                    <a class="soc_link" href="https://twitter.com/realDonaldTrump" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_facebook.png" alt="">
                     </a>
-                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                    <a class="soc_link" href="https://twitter.com/realDonaldTrump" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_instagram.png" alt="">
                     </a>
-                    <a href="https://twitter.com/realDonaldTrump" target="_blank">
+                    <a class="soc_link" href="https://twitter.com/realDonaldTrump" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_twitter.png" alt="">
                     </a>
-                    <a href="https://www.youtube.com/watch?v=izGwDsrQ1eQ" target="_blank">
+                    <a class="soc_link" href="https://www.youtube.com/watch?v=izGwDsrQ1eQ" target="_blank">
                         <img class="social-button" src="/images/SocIcons/icon_youtube.png" alt="">
                     </a>
                 </div>
