Some more responsiveness

--- a/WebFinalApp/WebFinalApp/wwwroot/about.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/about.html
@@ -17,7 +17,7 @@
                 <h2 class="subsection_title">
                     Sub title 1
                 </h2>
-                <div class="subsection_body">
+                <div class="subsection_body subsection_reverse">
                     <p class="content_text">
                         &emsp;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quisquam enim impedit! Eos architecto, reiciendis fugiat non vero numquam laudantium perspiciatis ratione ea optio expedita quibusdam atque nostrum rem nulla quod. Minima voluptas quam modi. Alias provident dicta ut nam similique iure omnis enim dolorem voluptatibus excepturi corrupti labore repellat, eius optio, dolor a sunt doloremque porro. Praesentium consequatur quibusdam corrupti nobis doloremque magni delectus aliquid atque facere beatae voluptate nisi dolor nemo repellat molestiae incidunt sed neque natus fugit, assumenda est quis fuga a nihil. Vitae ad impedit, sit cumque dolores, delectus doloribus quae distinctio laudantium similique earum? Nemo.
                     </p>
@@ -39,7 +39,7 @@
                 <h2 class="subsection_title">
                     About Masterclass
                 </h2>
-                <div class="subsection_body">
+                <div class="subsection_body subsection_reverse">
                     <p class="content_text">
                         &emsp;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quisquam enim impedit! Eos architecto, reiciendis fugiat non vero numquam laudantium perspiciatis ratione ea optio expedita quibusdam atque nostrum rem nulla quod. Minima voluptas quam modi. Alias provident dicta ut nam similique iure omnis enim dolorem voluptatibus excepturi corrupti labore repellat, eius optio, dolor a sunt doloremque porro. Praesentium consequatur quibusdam corrupti nobis doloremque magni delectus aliquid atque facere beatae voluptate nisi dolor nemo repellat molestiae incidunt sed neque natus fugit, assumenda est quis fuga a nihil. Vitae ad impedit, sit cumque dolores, delectus doloribus quae distinctio laudantium similique earum? Nemo.
                     </p>
@@ -62,3 +62,4 @@
 </section>
 
 <link rel="stylesheet" href="/style/about.css">
+<link rel="stylesheet" href="/style/about_responsive.css">
