--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manna</title>
     <link rel="stylesheet" href="/style/shared.css">
+    <link rel="stylesheet" href="/style/shared_responsive.css">
 </head>
 <body>
     <section class="section--general">
