--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -142,4 +142,5 @@
 </section>
 
 <link rel="stylesheet" href="/style/index.css">
+<link rel="stylesheet" href="/style/index_responsive.css">
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
