Even more responsiveness

--- a/WebFinalApp/WebFinalApp/wwwroot/blogs.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/blogs.html
@@ -1,11 +1,11 @@
 ﻿
-    <section class="section--general">
+    <!--<section class="section--general">
         <div class="container--general">
             <div id="main-article__items" class="main-article__items">
                 
             </div>
         </div>
-    </section>
+    </section>-->
 
 
 
