--- a/WebFinalApp/WebFinalApp/wwwroot/gallery.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/gallery.html
@@ -36,3 +36,4 @@
     
     <style rel="stylesheet" id="dynamic_style"></style>
     <link rel="stylesheet" href="/style/gallery.css">
+    <link rel="stylesheet" href="/style/gallery_responsive.css">
