Added burger menu

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -15,7 +15,12 @@
                     <img src="/images/logo.JPG" alt="">
                 </a>
 
-                <div class="navbar__items__menu">
+                <div id="burger_wrapper" class="burger_wrapper">
+                    <div class="burger_button">
+
+                    </div>
+                </div>
+                <div id="navbar__items__menu" class="navbar__items__menu">
                     <a onclick="goTo('/index', 'index')" class="item--navbar--button">HOME</a>
                     <a onclick="goTo('/order', 'order')" class="item--navbar--button">ORDER</a>
                     <a onclick="goTo('/gallery', 'gallery')" class="item--navbar--button">GALLERY</a>
