even even even more responsiveness

--- a/WebFinalApp/WebFinalApp/wwwroot/app.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/app.html
@@ -20,7 +20,7 @@
 
                     </div>
                 </div>
-                <div id="navbar__items__menu" class="navbar__items__menu">
+                <div id="navbar__items__menu" class="navbar__items__menu navbar__items__menu_hide">
                     <a onclick="goTo('/index', 'index')" class="item--navbar--button">HOME</a>
                     <a onclick="goTo('/order', 'order')" class="item--navbar--button">ORDER</a>
                     <a onclick="goTo('/gallery', 'gallery')" class="item--navbar--button">GALLERY</a>
