--- a/WebFinalApp/WebFinalApp/wwwroot/blogs.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/blogs.html
@@ -16,3 +16,4 @@
     </section>
 
     <link rel="stylesheet" href="/style/blogs.css">
+    <link rel="stylesheet" href="/style/blogs_responsive.css">
