--- a/WebFinalApp/WebFinalApp/wwwroot/order.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/order.html
@@ -12,7 +12,7 @@
                     <input type="radio" id="order-title-cakes" name="orderType" value="cake">
                     <label class="order-title" for="order-title-cakes">Cakes</label>
 
-                    <input type="radio" id="order-title-decor" name="orderType" value="decor"  checked>
+                    <input type="radio" id="order-title-decor" name="orderType" value="decor" checked>
                     <label class="order-title" for="order-title-decor">Decor</label>
 
                     <input type="radio" id="order-title-cookies" name="orderType" value="cookies">
@@ -32,6 +32,7 @@
                     <textarea id="additional_info" class="order_input_elem" rows="5" cols="35" placeholder="Additional information..."></textarea>
                     <input type="submit" id="order_input_button" value="Submit order">
                     <p id="order_submitted_text">Order submitted! Please check your email for the details.</p>
+                    <p id="fill_everything_text">Please fill out every field!</p>
                 </div>
             </div>
         </div>
@@ -39,3 +40,4 @@
 </section>
 
 <link rel="stylesheet" href="/style/order.css">
+<link rel="stylesheet" href="/style/order_responsive.css">
