--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -140,7 +140,9 @@
         <img id="right-arrow-tweets" class="nav-arrow" src="/images/right_arrow.png" alt="">
     </div>
 </section>
+<div id="tweets_id">
+
+</div>
 
 <link rel="stylesheet" href="/style/index.css">
 <link rel="stylesheet" href="/style/index_responsive.css">
-<script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
