--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -39,9 +39,10 @@
 <section class="section--general section--scroll-header">
     <div class="container--general container--scroll-header">
         <div class="scroll-header">
-            <div class="title">
+            <a href="https://twitter.com/Interior" target="_blank" class="title">
                 <h2>LATEST TWEETS</h2>
-            </div>
+                <img class="redirect-image" src="/images/redirect_image.png" alt="">
+            </a>
         </div>
     </div>
 </section>
@@ -50,93 +51,7 @@
 <section class="section--general section--content-scroll">
     <div class="container--general flex--center-items">
         <img id="left-arrow-tweets" class="nav-arrow" src="/images/left_arrow.png" alt="">
-        <div id="new-tweets" class="content-scroll">
-            <div class="twitter-tweet">
-                <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
-                <div class="tweet-body">
-                    <div class="tweet-user">
-                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
-                        <div class="tweet-user-id">
-                            <p>Donnie Trumpy</p>
-                            <p class="user-handle">@realDonaldTrump</p>
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat mas</p>
-                </div>
-                <div class="tweet-date">
-                    <div class="item--border"></div>
-                    <p>2:09 AM · May 6, 2014</p>
-                </div>
-            </div>
-            <div class="twitter-tweet">
-                <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
-                <div class="tweet-body">
-                    <div class="tweet-user">
-                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
-                        <div class="tweet-user-id">
-                            <p>Donnie Trumpy</p>
-                            <p class="user-handle">@realDonaldTrump</p>
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetunis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat mas</p>
-                </div>
-                <div class="tweet-date">
-                    <div class="item--border"></div>
-                    <p>2:09 AM · May 6, 2014</p>
-                </div>
-            </div>
-            <div class="twitter-tweet">
-                <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
-                <div class="tweet-body">
-                    <div class="tweet-user">
-                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
-                        <div class="tweet-user-id">
-                            <p>Donnie Trumpy</p>
-                            <p class="user-handle">@realDonaldTrump</p>
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat mas</p>
-                </div>
-                <div class="tweet-date">
-                    <div class="item--border"></div>
-                    <p>2:09 AM · May 6, 2014</p>
-                </div>
-            </div>
-            <div class="twitter-tweet">
-                <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
-                <div class="tweet-body">
-                    <div class="tweet-user">
-                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
-                        <div class="tweet-user-id">
-                            <p>Donnie Trumpy</p>
-                            <p class="user-handle">@realDonaldTrump</p>
-                        </div>
-                    </div>
-                    <p> nec, pellentesque eu, pretium quis, sem. Nulla consequat mas</p>
-                </div>
-                <div class="tweet-date">
-                    <div class="item--border"></div>
-                    <p>2:09 AM · May 6, 2014</p>
-                </div>
-            </div>
-            <div class="twitter-tweet">
-                <a class="tweet-link" target="_blank" href="https://twitter.com/realDonaldTrump/status/1330732289018503170"></a>
-                <div class="tweet-body">
-                    <div class="tweet-user">
-                        <img class="user-image" src="/images/scroller_img_1.jpg" alt="">
-                        <div class="tweet-user-id">
-                            <p>Donnie Trumpy</p>
-                            <p class="user-handle">@realDonaldTrump</p>
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat mas</p>
-                </div>
-                <div class="tweet-date">
-                    <div class="item--border"></div>
-                    <p>2:09 AM · May 6, 2014</p>
-                </div>
-            </div>
-        </div>
+        <div id="new-tweets" class="content-scroll"></div>
         <img id="right-arrow-tweets" class="nav-arrow" src="/images/right_arrow.png" alt="">
     </div>
 </section>
