minor QOL changes

--- a/WebFinalApp/WebFinalApp/wwwroot/index.html
+++ b/WebFinalApp/WebFinalApp/wwwroot/index.html
@@ -39,7 +39,7 @@
 <section class="section--general section--scroll-header">
     <div class="container--general container--scroll-header">
         <div class="scroll-header">
-            <a href="https://twitter.com/Interior" target="_blank" class="title">
+            <a href="https://twitter.com/GordonRamsay" target="_blank" class="title">
                 <h2>LATEST TWEETS</h2>
                 <img class="redirect-image" src="/images/redirect_image.png" alt="">
             </a>
